fix:added code refactoring changes for 2378