@@ -25,7 +25,6 @@
 package com.iluwatar.combinator;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -48,7 +47,7 @@ public interface Finder {
   static Finder contains(String word) {
     return txt -> Stream.of(txt.split("\n"))
         .filter(line -> line.toLowerCase().contains(word.toLowerCase()))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -88,7 +87,7 @@ public interface Finder {
             .find(txt)
             .stream()
             .flatMap(line -> andFinder.find(line).stream())
-            .collect(Collectors.toList());
+            .toList();
   }
 
 }
